# riki

./: LICENSE  MANIFEST.in  README.md  dev.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.sh  tasks.py
.github/workflows/: rajk.yml
dev_env/: settings_add.py
invoke_commands/: django.py  docs.py  test.py  vars.py
riki/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
riki/core/: course_logic.py
riki/migrations/: 0001_initial.py
riki/static/riki/css/: style.css
riki/templates/: base.html
riki/templates/riki/: course-griditem.html  course_preapp_box.html  courses.html  coursetable-bup.html  gridpage.html  home.html  project-griditem.html  project.html  projects.html  rendergrid.html  riki_base.html
riki/tests/: test_import.py
