[project]
name = "riki"
description = "class management app"
authors = [
    "Endre Márk Borza"
]
license = "MIT"
readme = "README.md"
python = ">=3.5"
url = "https://github.com/rajk-apps/riki"
keywords="classroom"
[build-system]
requires = [
    "toml >= 0.10.0",
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]